# ToDo

./: .gitignore  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/auth/: dependencies.py  exceptions.py  routers.py  schemas.py  services.py  utils.py
backend/categories/: exceptions.py  models.py  routers.py  schemas.py  services.py  utils.py
backend/database/: database.py
backend/migrations/: env.py
backend/migrations/versions/: 17d1689fb773_.py  1a6ca37add4d_.py  1e843efb4575_.py  5b42ec12c193_.py  876bd3dbb74c_.py  d4db84704299_initial_migrations.py  e11b7d45090d_.py  ea3e965bf92e_.py
backend/models/: task.py
backend/repositories/: task.py
backend/routers/: task.py
backend/schemas/: task.py
backend/services/: task.py
backend/src/: config.py  database.py  dependency.py
backend/tasks/: exceptions.py  models.py  routers.py  schemas.py  services.py  utils.py
backend/users/: models.py  routers.py  schemas.py  validators.py
